correct app name to match the Google play store

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
 
 
 
-    <string name="app_name">PoGo Moves</string>
+    <string name="app_name">Moves Guide for Pokemon Go</string>
 </resources>
